[package]
name = "bioneer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/klaatu01/bioneer"
description = "An Open-Source Rust Implementation of Bionic Reading."
readme = "README.md"
license = "MIT"
keywords = ["bionic", "reading", "bionify", "bioneer", "html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.8.0"
